Color of the "search" button must be the same as other part of the breadcrumb Select state displayed after opening/closing search Icons to change view type are not correctly aligned and vertically centered Search placeholder text must be "Search for Projects" instead of "Search for Projects and Documents" Clicking on a project, must open it in a new browser's tab Loader is not displayed at the middle of the page Make the animation which is displaying modal views to edit project's details/privacies/developers faster

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,41 +98,99 @@ th h4 { font-weight:normal; }
 .morris-hover.morris-default-style .morris-hover-point { margin:0; }
 
 
-.search1   {float: right; height: 35px;  }
-
+/* Breadcrumb Search
+----------------------------------------------*/
+.search1   {
+  float: right; 
+  height: 35px;
+}
 .searchfield { 
-    background: url(../images/searchIcon.png) no-repeat center center #E3E3E3;
-    border: medium none; border-left: 1px solid #ddd;
-    height: 36px;
-    padding: 0;
-    width: 42px; color: #555;
+  background: url('../images/searchIcon.png') no-repeat center center;
+  border: medium none;
+  border-left: 1px solid #ddd;
+  height: 36px;
+  padding: 0;
+  width: 42px;
+  color: #555;
 }
-
-.searchfull  {position: relative; position: absolute; right: 0; top: 47px;}
-.searchfullfactory  { top: 0px;}
+.searchfull  {
+  position: absolute; 
+  right: 0; 
+  top: 47px; 
+  z-index: 11;
+}
+.searchfullfactory  { 
+  top: 0px;
+}
 .searchfull  .searchfield { 
-    background: url(../images/searchIcon.png) no-repeat 10px center #E3E3E3; 
-    border: medium none; 
-    border-left: 1px solid #ddd; 
-    height: 36px; 
-    padding: 0 10px 0 30px;
-    width: 100%; color: #555; 
-    font-style: italic;
+  background: url('../images/searchIcon.png') no-repeat 10px center #E3E3E3; 
+  border: medium none; 
+  border-left: 1px solid #ddd; 
+  height: 36px; 
+  padding: 0 10px 0 30px;
+  width: 100%;
+  color: #555; 
+  font-style: italic;
 }
-
-
 .closeBtn { 
-    background: url(../images/closeIcon.png) no-repeat center center; border:none;  height: 36px;
-    opacity: 0.4;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 43px;
+  background: url('../images/closeIcon.png') no-repeat center center; 
+  border:none;
+  height: 36px;
+  opacity: 0.4;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 43px;
 }
-.closeBtn:hover , .closeBtn:focus { opacity: 1; }
+.closeBtn:hover,
+.closeBtn:focus { 
+  opacity: 1;
+}
 
-#loading-bar-spinner {
-    top: 150px;
-    left: 400px;
+/* Spinner Alignment
+----------------------------------------------*/
+#loading-bar-spinner .spinner-icon {
+  position: fixed;
+  top: 50%;
+  left: 50%;
 }
+
+/* Breadcrumb Icons Vertical Aligned
+----------------------------------------------*/
+.breadcrumb li .fa-bars,
+.breadcrumb li .fa-th-large,
+.breadcrumb li .fa-caret-up {
+  position: relative;
+  z-index: 4;
+}
+.breadcrumb li .fa-bars {
+  top: 1px;
+  margin-right: 5px;
+  margin-left: 2px;
+}
+.breadcrumb li .fa-th-large{
+  top: 2px;
+}
+.breadcrumb li .fa-caret-up {
+  top: -1px;
+  text-decoration: none;
+}
+
+/* Breadcrumb Shadow underline on Focus
+----------------------------------------------*/
+.breadcrumb input:focus {
+  outline-width: 0;
+  outline: none;
+  box-shadow: 0 none;
+}
+
+/* Bootstrap Modal Window Animation
+----------------------------------------------*/
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform 0.1s ease-out;
+  -moz-transition: -moz-transform 0.1s ease-out;
+  -o-transition: -o-transform 0.1s ease-out;
+  transition: transform 0.1s ease-out;
+}
+
